--- a/kyc.html
+++ b/kyc.html
@@ -625,7 +625,7 @@
         const ceoEmailInput = document.getElementById('ceoEmail');
         const ceoPhoneInput = document.getElementById('ceoPhone');
         const cfoNameInput = document.getElementById('cfoName');
-        const cfoEmailInput = document = document.getElementById('cfoEmail');
+        const cfoEmailInput = document.getElementById('cfoEmail'); // Corrected this line
         const cfoPhoneInput = document.getElementById('cfoPhone');
         const otherKeyNameInput = document.getElementById('otherKeyName');
         const otherKeyPositionInput = document.getElementById('otherKeyPosition');
